changed the font size of the navrbar brand as it was too big on mobile and fixed the sidebar for mobiles as it covereed the map , also updated the readme

--- a/assets/style/map-style.css
+++ b/assets/style/map-style.css
@@ -37,6 +37,7 @@
     #panel {
       height: auto;
       width:fit-content;
+      position: relative;
       
     }
 }
