--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,7 +19,7 @@
 
 .navbar-brand{
     font-family: "Architects Daughter",sans-serif;
-    font-size: 50px;
+    font-size: 40px;
     
 }
 .navbar-light .navbar-brand {
